# typejson_titlecraft

./: .gitignore  README.md  pyproject.toml
src/typejson_titlecraft/: __init__.py  cli.py  core.py
tests/: test_core.py
