[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "typejson-titlecraft"
version = "0.1.0"
description = "Generate human-readable titles from text using ChatGPT"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "555 Ventures LLC", email = "info@555.ventures" }]
dependencies = [
  "openai>=1.30",
]

[project.scripts]
typejson-titlecraft = "typejson_titlecraft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/typejson_titlecraft"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]